# akabot

./: Dockerfile  README.md  docker-compose.yaml
akabot/: CMakeLists.txt  package.xml
akabot_aruco/: package.xml  setup.cfg  setup.py
akabot_bringup/: CMakeLists.txt  package.xml
akabot_bringup/config/: ros2_controllers.yaml
akabot_bringup/src/: I2CPeripheral.cpp  pca9685_comm.cpp  pca9685_system.cpp
akabot_controllers/: CMakeLists.txt  package.xml  rotate_servo.py
akabot_controllers/scripts/: rotate_servo.py
akabot_description/: CMakeLists.txt  package.xml
akabot_description/config/: initial_positions.yaml
akabot_description/launch/: description_launch.py  robot_state_publisher_launch.py
akabot_gazebo/: CMakeLists.txt  package.xml
akabot_gazebo_classic/: CMakeLists.txt  package.xml
akabot_manipulation/: CMakeLists.txt  package.xml
akabot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
akabot_moveit_config/config/: akabot.ros2_control.xacro  akabot.srdf  akabot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml
akabot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
akabot_moveit_config/rviz/: moveit.rviz
akabot_moveit_config/urdf/: fake.akabot.urdf.xacro
akabot_planner/: CMakeLists.txt  package.xml
akabot_teleop/: CMakeLists.txt  package.xml
(+29 files in other folders)
